@@ -17,15 +17,10 @@
 
 package org.apache.ignite.internal.processors.query.calcite.schema;
 
-import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.function.Function;
-import java.util.function.Predicate;
-
-import com.google.common.collect.ImmutableList;
 import org.apache.calcite.plan.Convention;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptTable;
@@ -37,7 +32,6 @@ import org.apache.calcite.rel.type.RelDataTypeFactory;
 import org.apache.calcite.schema.Statistic;
 import org.apache.calcite.schema.impl.AbstractTable;
 import org.apache.calcite.util.ImmutableBitSet;
-import org.apache.ignite.internal.processors.query.calcite.exec.ExecutionContext;
 import org.apache.ignite.internal.processors.query.calcite.metadata.ColocationGroup;
 import org.apache.ignite.internal.processors.query.calcite.prepare.PlanningContext;
 import org.apache.ignite.internal.processors.query.calcite.rel.logical.IgniteLogicalIndexScan;
@@ -45,26 +39,26 @@ import org.apache.ignite.internal.processors.query.calcite.rel.logical.IgniteLog
 import org.apache.ignite.internal.processors.query.calcite.trait.IgniteDistribution;
 import org.apache.ignite.internal.processors.query.calcite.trait.RewindabilityTrait;
 import org.apache.ignite.internal.processors.query.calcite.type.IgniteTypeFactory;
-import org.jetbrains.annotations.Nullable;
-
-import static org.apache.ignite.internal.processors.query.calcite.Stubs.resultSetGenerator;
 
 /**
  * Ignite table implementation.
  */
 public class IgniteTableImpl extends AbstractTable implements IgniteTable {
-    /** */
+    /**
+     *
+     */
     private final TableDescriptor desc;
-
-    /** */
+    
+    /**
+     *
+     */
     private final Statistic statistic;
-
-    /** */
-    private volatile Collection<Object[]> rows;
-
-    /** */
+    
+    /**
+     *
+     */
     private final Map<String, IgniteIndex> indexes = new ConcurrentHashMap<>();
-
+    
     /**
      * @param desc Table descriptor.
      */
@@ -72,135 +66,129 @@ public class IgniteTableImpl extends AbstractTable implements IgniteTable {
         this.desc = desc;
         statistic = new StatisticsImpl();
     }
-
+    
     /** {@inheritDoc} */
-    @Override public RelDataType getRowType(RelDataTypeFactory typeFactory, ImmutableBitSet requiredColumns) {
-        return desc.rowType((IgniteTypeFactory)typeFactory, requiredColumns);
+    @Override
+    public RelDataType getRowType(RelDataTypeFactory typeFactory, ImmutableBitSet requiredColumns) {
+        return desc.rowType((IgniteTypeFactory) typeFactory, requiredColumns);
     }
-
+    
     /** {@inheritDoc} */
-    @Override public Statistic getStatistic() {
+    @Override
+    public Statistic getStatistic() {
         return statistic;
     }
-
-
+    
+    
     /** {@inheritDoc} */
-    @Override public TableDescriptor descriptor() {
+    @Override
+    public TableDescriptor descriptor() {
         return desc;
     }
-
+    
     /** {@inheritDoc} */
-    @Override public IgniteLogicalTableScan toRel(RelOptCluster cluster, RelOptTable relOptTbl) {
+    @Override
+    public IgniteLogicalTableScan toRel(RelOptCluster cluster, RelOptTable relOptTbl) {
         RelTraitSet traitSet = cluster.traitSetOf(distribution())
-            .replace(RewindabilityTrait.REWINDABLE);
-
+                .replace(RewindabilityTrait.REWINDABLE);
+        
         return IgniteLogicalTableScan.create(cluster, traitSet, relOptTbl, null, null, null);
     }
-
+    
     /** {@inheritDoc} */
-    @Override public IgniteLogicalIndexScan toRel(RelOptCluster cluster, RelOptTable relOptTbl, String idxName) {
+    @Override
+    public IgniteLogicalIndexScan toRel(RelOptCluster cluster, RelOptTable relOptTbl, String idxName) {
         RelTraitSet traitSet = cluster.traitSetOf(Convention.Impl.NONE)
-            .replace(distribution())
-            .replace(RewindabilityTrait.REWINDABLE)
-            .replace(getIndex(idxName).collation());
-
+                .replace(distribution())
+                .replace(RewindabilityTrait.REWINDABLE)
+                .replace(getIndex(idxName).collation());
+        
         return IgniteLogicalIndexScan.create(cluster, traitSet, relOptTbl, idxName, null, null, null);
     }
-
+    
     /** {@inheritDoc} */
-    @Override public <Row> Iterable<Row> scan(
-        ExecutionContext<Row> execCtx,
-        ColocationGroup group,
-        Predicate<Row> filter,
-        Function<Row, Row> rowTransformer,
-        @Nullable ImmutableBitSet usedColumns
-    ) {
-        String locNodeId = execCtx.planningContext().localNodeId();
-
-        if (group.nodeIds().contains(locNodeId))
-            return (Iterable<Row>) rows(execCtx.getTypeFactory());
-
-        return Collections.emptyList();
-    }
-
-    /** {@inheritDoc} */
-    @Override public IgniteDistribution distribution() {
+    @Override
+    public IgniteDistribution distribution() {
         return desc.distribution();
     }
-
+    
     /** {@inheritDoc} */
-    @Override public ColocationGroup colocationGroup(PlanningContext ctx) {
+    @Override
+    public ColocationGroup colocationGroup(PlanningContext ctx) {
         return desc.colocationGroup(ctx);
     }
-
+    
     /** {@inheritDoc} */
-    @Override public Map<String, IgniteIndex> indexes() {
+    @Override
+    public Map<String, IgniteIndex> indexes() {
         return Collections.unmodifiableMap(indexes);
     }
-
+    
     /** {@inheritDoc} */
-    @Override public void addIndex(IgniteIndex idxTbl) {
+    @Override
+    public void addIndex(IgniteIndex idxTbl) {
         indexes.put(idxTbl.name(), idxTbl);
     }
-
+    
     /** {@inheritDoc} */
-    @Override public IgniteIndex getIndex(String idxName) {
+    @Override
+    public IgniteIndex getIndex(String idxName) {
         return indexes.get(idxName);
     }
-
+    
     /** {@inheritDoc} */
-    @Override public void removeIndex(String idxName) {
+    @Override
+    public void removeIndex(String idxName) {
         indexes.remove(idxName);
     }
-
+    
     /** {@inheritDoc} */
-    @Override public <C> C unwrap(Class<C> aCls) {
-        if (aCls.isInstance(desc))
-            return aCls.cast(desc);
-
-        return super.unwrap(aCls);
-    }
-
-    private Collection<Object[]> rows(IgniteTypeFactory typeFactory) {
-        if (rows == null) {
-            synchronized (this) {
-                if (rows == null)
-                    rows = resultSetGenerator(10, typeFactory, getRowType(typeFactory));
-            }
+    @Override
+    public <C> C unwrap(Class<C> cls) {
+        if (cls.isInstance(desc)) {
+            return cls.cast(desc);
         }
-
-        return rows;
+        
+        return super.unwrap(cls);
     }
-
-    /** */
+    
+    /**
+     *
+     */
     private class StatisticsImpl implements Statistic {
         /** {@inheritDoc} */
-        @Override public Double getRowCount() {
-            return (double)rows(new IgniteTypeFactory()).size();
+        @Override
+        public Double getRowCount() {
+            return 10_000d;
         }
-
+        
         /** {@inheritDoc} */
-        @Override public boolean isKey(ImmutableBitSet cols) {
+        @Override
+        public boolean isKey(ImmutableBitSet cols) {
             return false; // TODO
         }
-
+        
         /** {@inheritDoc} */
-        @Override public List<ImmutableBitSet> getKeys() {
+        @Override
+        public List<ImmutableBitSet> getKeys() {
             return null; // TODO
         }
-
+        
         /** {@inheritDoc} */
-        @Override public List<RelReferentialConstraint> getReferentialConstraints() {
-            return ImmutableList.of();
+        @Override
+        public List<RelReferentialConstraint> getReferentialConstraints() {
+            return List.of();
         }
-
+        
         /** {@inheritDoc} */
-        @Override public List<RelCollation> getCollations() {
-            return ImmutableList.of(); // The method isn't used
+        @Override
+        public List<RelCollation> getCollations() {
+            return List.of(); // The method isn't used
         }
-
+        
         /** {@inheritDoc} */
-        @Override public IgniteDistribution getDistribution() {
+        @Override
+        public IgniteDistribution getDistribution() {
             return distribution();
         }
     }
